# rauer-rebuild

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
base/rebuild_reference_2026-07-05/: README.md
deploy/: README.md  backup.sh  buddharauer-backend.service  buddharauer-backup.service  buddharauer-backup.timer  buddharauer-controller.service  buddharauer-frontend.service  controller.py  nginx-buddharauer.conf  setup_ec2.sh  sudoers-buddharauer-controller
scripts/: dedupe_entities.py  extract_entities.py  extract_relationships.py  process_documents.py  reclassify_entities.py
session logs/: 2026-07-05-rebuild-mvp.md  2026-07-06-admin-page-separation.md  2026-07-06-backend-ollama-timeout-fix.md  2026-07-07-efficiency-and-branch-split.md  2026-07-07-entity-wiki-and-citations.md  session-2.md  session-3.md  session-4.md  session-5.md  session-6.md  session-7.md
src/api/: main.py  schemas.py
src/database/: document_registry.py  entity_store.py  query_logger.py  vector_store.py
src/frontend/: api_client.py  app.py
src/pipeline/: chunker.py  embeddings.py  entity_deduper.py  entity_extractor.py  image_extractor.py  ingest.py  mention_context.py  pdf_extractor.py  relationship_extractor.py
src/rag/: chat_engine.py  conversation_store.py  prompt_builder.py  retriever.py
src/utils/: auth.py  config.py  logging.py  ollama_client.py  rate_limiter.py
src/wiki/: routes.py  summary.py
tests/: conftest.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_api.py  test_chat_engine.py  test_controller.py  test_entity_dedup.py  (+6 more)
(+141 files in other folders)
